--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "surge": "^0.20.1",
     "svg4everybody": "^2.1.9",
     "swiper": "^4.5.0",
+    "tooltipster": "^4.2.7",
     "viewport-units-buggyfill": "^0.6.2"
   },
   "devDependencies": {
